# aufgabe3-Peaks

./: .pdm-python  README.md  find_peaks.py  main.py  powerkurve.py  pyproject.toml
data/: person_db.json
