[project]
name = "aufgabe3-Peaks"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JonPer00", email = "pj1959@mci4me.at"},
]
dependencies = ["pandas>=2.3.0", "ipykernel>=6.29.5", "plotly>=6.1.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
